--- a/OMDS-Mod 6-Week11-Annick-Uwineza.ipynb
+++ b/OMDS-Mod 6-Week11-Annick-Uwineza.ipynb
@@ -10,11 +10,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85de9f21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting statsmodels\n",
+      "  Downloading statsmodels-0.14.5-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl.metadata (9.5 kB)\n",
+      "Requirement already satisfied: numpy<3,>=1.22.3 in /home/codespace/.local/lib/python3.12/site-packages (from statsmodels) (2.3.4)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in /home/codespace/.local/lib/python3.12/site-packages (from statsmodels) (1.16.3)\n",
+      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in /home/codespace/.local/lib/python3.12/site-packages (from statsmodels) (2.3.3)\n",
+      "Collecting patsy>=0.5.6 (from statsmodels)\n",
+      "  Downloading patsy-1.0.2-py2.py3-none-any.whl.metadata (3.6 kB)\n",
+      "Requirement already satisfied: packaging>=21.3 in /home/codespace/.local/lib/python3.12/site-packages (from statsmodels) (25.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/codespace/.local/lib/python3.12/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/codespace/.local/lib/python3.12/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/codespace/.local/lib/python3.12/site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in /home/codespace/.local/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels) (1.17.0)\n",
+      "Downloading statsmodels-0.14.5-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl (10.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.4/10.4 MB\u001b[0m \u001b[31m12.2 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0mm0:00:01\u001b[0m:01\u001b[0mm\n",
+      "\u001b[?25hDownloading patsy-1.0.2-py2.py3-none-any.whl (233 kB)\n",
+      "Installing collected packages: patsy, statsmodels\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [statsmodels]\u001b[0m [statsmodels]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed patsy-1.0.2 statsmodels-0.14.5\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip install statsmodels\n",
+    "\n",
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
     "\n",
@@ -26,23 +53,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ce80c354",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9268039244154727\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 1000 \n",
+    " \n",
+    "event_time = int(num / 2) \n",
+    " \n",
+    "R_market = np.random.normal(0, 1, num) + np.arange(num) / num \n",
+    " \n",
+    "R_target = 2 + R_market + np.random.normal(0, 1, num) + (np.arange(num) == int(num / 2) + 1) * 2 \n",
+    " \n",
+    "results = sm.OLS(R_target[:event_time], sm.add_constant(R_market[:event_time])).fit() \n",
+    " \n",
+    "alpha, beta = results.params \n",
+    " \n",
+    "resid = R_target - results.predict(sm.add_constant(R_market)) \n",
+    " \n",
+    "print(resid[event_time + 1] / resid[:event_time].std(ddof = 2)) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9a94f29f",
    "metadata": {},
    "source": [
-    "## Question 1 – Power to detect the event at `event_time + 1`\n",
+    "## Question 1 \n",
     "\n",
-    "We simulate many datasets using the provided code pattern, compute the t-statistic\n",
-    "at `event_time + 1`, and estimate the probability that `|t| > 1.96` (i.e., the\n",
-    "event is detected at the 5% significance level)."
+    "Which is closest to the probability that this t-test will be able to detect the event at event_time + 1 with the given code? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3753b35e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5035)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def simulate_q1_once(num=1000):\n",
     "    event_time = int(num / 2)\n",
@@ -81,23 +149,28 @@
    "id": "0f8b9b40",
    "metadata": {},
    "source": [
-    "## Question 2 – Placebo tests on a fixed dataset\n",
+    "## Question 2 \n",
     "\n",
-    "We now:\n",
-    "1. Generate a **single** dataset (fixed).\n",
-    "2. For each possible fictitious `event_time`, train the market model **only on data before** that fictitious time.\n",
-    "3. Compute the t-statistic at the fictitious event time.\n",
-    "4. Check what fraction of these placebo tests exceed `|t| > 1.96`.\n",
-    "\n",
-    "With a well-specified model and independent errors, this should be close to the 5% nominal level.\n"
+    "Use the same code but put np.random.seed(0) at the beginning of each loop to ensure that you are performing placebo tests on a fixed dataset. Perform a placebo test by setting the fictitious event_time to all possible times, while leaving the event in R_target at just the 1 time. The placebo test trains itself on the data leading up to the fictitious event. About what fraction of placebo tests seem to detect an event at the fictitious event time? \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7d6a14ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.04795918367346939)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate one fixed dataset\n",
     "np.random.seed(0)\n",
@@ -137,22 +210,28 @@
    "id": "bb1292e8",
    "metadata": {},
    "source": [
-    "## Question 3 – Local placebo tests around the true event\n",
+    "## Question 3 \n",
     "\n",
-    "Now we:\n",
-    "1. Generate many *different* datasets (by changing the seed).\n",
-    "2. In each dataset, compute the t-statistic at the **true** event time (`event_time + 1`).\n",
-    "3. Also compute t-statistics for 20 fictitious events **before** and 20 **after** the real event.\n",
-    "4. For each dataset, compute what fraction of these 40 placebo t-statistics are **larger in absolute value** than the true event's t-stat.\n",
-    "5. Average that fraction across many runs.\n"
+    "Do the same placebo test, but this time only run the test 20 times before and twenty times after the actual event. On average (over many runs of the code), what fraction of the 40 placebo tests get a higher t-value than the actual event? This time, adjust np.random.seed() to represent a different dataset when needed. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "616bae1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.14575000000000002)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def simulate_q3_once(num=1000, seed=0):\n",
     "    np.random.seed(seed)\n",
@@ -196,26 +275,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5c37388d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_error(corr_const, num): \n",
+    " \n",
+    " \n",
+    "  sigma = 5 * 1 / np.sqrt((1 - corr_const)**2 / (1 - corr_const**2)) \n",
+    " \n",
+    " \n",
+    "  err = list() \n",
+    " \n",
+    " \n",
+    "  prev = np.random.normal(0, sigma) \n",
+    " \n",
+    " \n",
+    "  for n in range(num): \n",
+    " \n",
+    " \n",
+    "    prev = corr_const * prev + (1 - corr_const) * np.random.normal(0, sigma) \n",
+    " \n",
+    " \n",
+    "    err.append(prev) \n",
+    " \n",
+    " \n",
+    "  return np.array(err) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8f52f56e",
    "metadata": {},
    "source": [
-    "## Question 4 – Placebo tests with autocorrelated errors\n",
+    "## Question 4 \n",
     "\n",
-    "Now we repeat the **Question 2** placebo procedure, but instead of using\n",
-    "independent normal errors for `R_target`, we generate **autocorrelated errors**\n",
-    "using the provided `make_error` function with `corr_const = 0.9`.\n",
-    "\n",
-    "Correlated errors tend to create long runs of similarly signed residuals, which\n",
-    "inflates the probability of false positives in the placebo tests.\n"
+    "Do the same thing as in question 2, but this time use make_error with corr_const = 0.9 to generate the error for R_target instead of np.random.normal. Consider before attempting this: Would you expect this kind of dataset, where errors are not independent, to result in more or fewer false positives in the placebo tests? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "46aea354",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.04081632653061224)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def make_error(corr_const, num):\n",
     "    sigma = 5 * 1 / np.sqrt((1 - corr_const)**2 / (1 - corr_const**2))\n",
@@ -258,7 +374,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
