Mod6-Wee11 & Reflection

--- a/OMDS-Mod 6-Week11-Annick-Uwineza.ipynb
+++ b/OMDS-Mod 6-Week11-Annick-Uwineza.ipynb
@@ -372,6 +372,173 @@
     "fraction_placebo_detect_auto = np.mean(placebo_results_auto)\n",
     "fraction_placebo_detect_auto\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25073c08",
+   "metadata": {},
+   "source": [
+    "## REFLECTION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d70b0876",
+   "metadata": {},
+   "source": [
+    "1. Construct a dataset for an event study where the value, derivative, and second derivative of a trend all change discontinuously (suddenly) after an event.\n",
+    "Build a model that tries to decide whether the event is real (has a nonzero effect) using:\n",
+    "(a) only the value,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d8325c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.998\n",
+      "Model:                            OLS   Adj. R-squared:                  0.998\n",
+      "Method:                 Least Squares   F-statistic:                 3.715e+04\n",
+      "Date:                Sat, 22 Nov 2025   Prob (F-statistic):          9.94e-270\n",
+      "Time:                        22:49:33   Log-Likelihood:                -860.88\n",
+      "No. Observations:                 200   AIC:                             1730.\n",
+      "Df Residuals:                     196   BIC:                             1743.\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         44.5678      3.992     11.164      0.000      36.695      52.441\n",
+      "x1           228.1174      5.119     44.567      0.000     218.023     238.212\n",
+      "x2            -2.8714      0.095    -30.076      0.000      -3.060      -2.683\n",
+      "x3             0.0411      0.000     95.674      0.000       0.040       0.042\n",
+      "==============================================================================\n",
+      "Omnibus:                       22.282   Durbin-Watson:                   0.025\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               26.093\n",
+      "Skew:                          -0.843   Prob(JB):                     2.16e-06\n",
+      "Kurtosis:                       3.535   Cond. No.                     7.50e+04\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 7.5e+04. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "Event coefficient (beta_event): 228.11741972056552\n",
+      "p-value for event effect: 1.6033894029514882e-104\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "# Set up time and event\n",
+    "T = 200\n",
+    "t = np.arange(T)\n",
+    "event_time = 100\n",
+    "post = (t > event_time).astype(int)\n",
+    "\n",
+    "# Construct Y with different level, slope, and curvature after the event\n",
+    "# Pre-event: mild quadratic\n",
+    "# Post-event: bigger intercept, steeper slope, more curvature\n",
+    "Y = np.where(\n",
+    "    t <= event_time,\n",
+    "    0.01 * t**2 + 0.1 * t,                       # pre-event trend\n",
+    "    (0.03 * t**2 + 0.6 * t + 10),                # post-event trend: level, slope, curvature all changed\n",
+    ")\n",
+    "\n",
+    "# Add noise\n",
+    "Y = Y + np.random.normal(0, 1, size=T)\n",
+    "\n",
+    "# Model using ONLY the value (no explicit derivatives),\n",
+    "# but allowing for a general trend via t and t^2\n",
+    "X = np.column_stack([post, t, t**2])   # event indicator + time + time^2\n",
+    "X = sm.add_constant(X)\n",
+    "model = sm.OLS(Y, X).fit()\n",
+    "print(model.summary())\n",
+    "\n",
+    "# The key question: is the event \"real\"?\n",
+    "# That is, is the coefficient on `post` (the event dummy) significantly nonzero?\n",
+    "beta_event = model.params[1]\n",
+    "pval_event = model.pvalues[1]\n",
+    "print(\"Event coefficient (beta_event):\", beta_event)\n",
+    "print(\"p-value for event effect:\", pval_event)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b60c96",
+   "metadata": {},
+   "source": [
+    "(b) the value, derivative, and second derivative."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "361458b5",
+   "metadata": {},
+   "source": [
+    "For part (b), I added the first and second differences so the model could look at how the value, slope, and curvature all changed after the event. This version did a better job because it did not just say something happened, it showed what changed. It picked up the jump in the value, the shift in the trend, and the change in curvature separately. Here, “better” means it detected the event more clearly and gave a more useful picture of what actually changed instead of blending everything into one effect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d1b79b1",
+   "metadata": {},
+   "source": [
+    "## Which of these models is better at detecting and/or quantifying the impact of the event?  (What might \"better\" mean here?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7861705",
+   "metadata": {},
+   "source": [
+    "The model that uses the value, the first difference, and the second difference is better because it captures more of the ways the event affects the data. Instead of mixing everything into one shift, it shows whether the event changed the level, the slope, or the curvature. In this context, “better” means the model is more sensitive to the event, offers clearer evidence that something changed, and gives a more detailed picture of what the impact actually looks like."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "665efccc",
+   "metadata": {},
+   "source": [
+    "2. Construct a dataset in which there are three groups whose values each increase discontinuously (suddenly) by the same amount at a shared event; they change in parallel\n",
+    "over time, but they have different starting values. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce32bb5d",
+   "metadata": {},
+   "source": [
+    "For this part, I set up a simple panel-style dataset with three groups observed over time. Each group followed the same upward trend over time, but I gave them different starting values by adding a different constant to each group so one started low, one in the middle, and one higher. At a chosen event time, I added the same fixed jump to all three groups’ values so they each increased suddenly by the same amount. This way the groups stayed in parallel before and after the event, kept their baseline differences, and shared a common discrete jump at the event."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "017108ce",
+   "metadata": {},
+   "source": [
+    "Create a model that combines group fixed effects with an event study, as suggested in the online reading.\n",
+    "Explain what you did, how the model works, and how it accounts for both baseline differences and the common event effect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06a84f83",
+   "metadata": {},
+   "source": [
+    "I fit a regression that included group fixed effects along with a post-event indicator. The group fixed effects captured the baseline differences between the three groups, since each group started at a different level but followed the same trend. The post-event indicator captured the sudden jump that all groups experienced at the same time. By separating these two pieces, the model explained who starts higher through the fixed effects and explained the shared event impact through the post variable. This let the model account for both the different starting points across groups and the common shift caused by the event."
+   ]
   }
  ],
  "metadata": {
